# slots

./: CMakeLists.txt  README.md
Slot_machine/: CMakeLists.txt  Slot_machine.cpp  Slot_machine.h
